--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -125,6 +125,10 @@
         margin: 0 auto;
         max-width: 380px;
 
+        .section__title {
+            margin-bottom: 28px;
+        }
+
         @include device(tablet) {
             max-width: 760px;
             margin: 0 auto;
@@ -153,6 +157,7 @@
     }
 
     .card {
+        position: relative;
         border-radius: 15px;
         background-color: $white;
 
@@ -184,4 +189,21 @@
                 font-size: 17px;
             }
         }
+    }
+
+    .new-label {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: 10px;
+        right: 20px;
+        height: 29px;
+        width: 80px;
+        border-radius: 2px;
+        background-color: $third-color;
+        color: $third-color-font;
+        font-size: 14px;
+        font-weight: 600;
+        box-shadow: 0px 2px 4px 0px #00000026;
     }
